Wed Dec 25 20:30:10 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* iseq.c (rb_iseq_parameters): push argument type symbol only for
	  unnamed rest keywords argument.

Wed Dec 25 20:28:48 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (rb_iseq_min_max_arity): maximum argument is unlimited if
	  having rest keywords argument.  [ruby-core:53298] [Bug #8072]

Wed Dec 25 18:29:22 2013  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (argument_error): insert dummy frame to make
	  a backtrace object intead of modify backtrace string array.
	  [Bug #9295]

	* test/ruby/test_backtrace.rb: add a test for this patch.
	  fix test to compare a result of Exception#backtrace with
	  a result of Exception#backtrace_locations.

Wed Dec 25 13:00:54 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: let mingw do something black-magic, and check if
	  _gmtime64_s() is available actually.

	* win32/win32.c (gmtime_s, localtime_s): use _gmtime64_s() and
	  _localtime64_s() if available, not depending on very confusing
	  mingw variants macros.  based on the patch by phasis68 (Heesob
	  Park) at [ruby-core:58764].  [ruby-core:58391] [Bug #9119]

Wed Dec 25 12:33:41 2013  Yusuke Endoh  <mame@tsg.ne.jp>

	* sample/trick2013/: added the award-winning entries of TRICK 2013.
	  See https://github.com/tric/trick2013 for the contest outline.
	  (Matz has approved the attachment.)

Wed Dec 25 10:42:02 2013  Yamashita Yuu  <yamashita@geishatokyo.com>

	* ext/openssl/ossl_ssl.c (Init_ossl_ssl): Declare a constant
	  `OP_MSIE_SSLV2_RSA_PADDING` only if the macro is defined.  The
	  `SSL_OP_MSIE_SSLV2_RSA_PADDING` has been removed from latest
	  snapshot of OpenSSL 1.0.1.  [Fixes GH-488]

Wed Dec 25 01:03:00 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (bind_local_variables): allowing binding to list its
	  local variables.  patch by Jack Danger Canty <jackdanger AT
	  squareup.com> at [ruby-core:56543].  [Feature #8773]
